# Async-Boost-Tcp-Client-Server

./: CMakeLists.txt  README.md  cmd.txt  main.cpp  run.bash
ControllerLayer/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Listener.cpp  Listener.h  RequestHandler.h  Session.cpp  Session.h  TcpServer.h
DataLayer/: CMakeLists.txt  ItemHolder.cpp  ItemHolder.h  items_initial_count.json  items_initial_count_prod.json
ServiceLayer/: CMakeLists.txt  KitchenWorker.h  Server.cpp  Server.h
server/: CMakeLists.txt  ItemHolder.cpp  ItemHolder.h  KitchenWorker.cpp  Server.cpp  Server.h  items_desc.json  items_desc.txt
tests/: CMakeLists.txt  ItemHolder_tests.cpp  Net_tests.cpp  Server_tests.cpp  test_buy.json  test_make_order.json  test_remove.json
